objects/engage_reports__Engage_Email_Template__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data tool in the SDO to insert records</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>engage_reports__Composite_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>engage_reports__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Engage Email Template</label>
    <nameField>
        <label>Engage Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engage Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>